feat: Implemented night-time mob spawn logic, added effects & animations, refactored code for organization and maintainability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "gson",
         "Heightmap",
         "MAINHAND",
+        "MODID",
         "OVERWORLD",
         "Respawn",
         "RESPAWNED"
